# svg-optimizer

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile  progress.md
docs/: final_docs.md  init_docs.md  progress.md
src/: errors.rs  lib.rs  main.rs  node.rs  optimizations.rs  optimizer.rs  parser.rs  writer.rs
src/optimizations/: common.rs  convert_paths_to_uses.rs  convert_to_viewbox.rs  ellipses_to_circles.rs  ellipsis_to_circles.rs  extract_common_attributes.rs  merge_consecutive_paths.rs  merge_identical_paths.rs  merge_transforms.rs  remove_attr_whitespace.rs  remove_attribute_whitespace.rs  remove_comments.rs  remove_descriptions.rs  remove_dimensions.rs  remove_doctype.rs  remove_editor_namespace_data.rs  remove_empty_attributes.rs  remove_empty_containers.rs  remove_empty_texts.rs  remove_hidden_elements.rs  remove_unused_defs.rs  remove_useless_groups.rs  remove_useless_ids.rs  remove_useless_stroke_and_fill.rs  remove_whitespace_outside_tags.rs  round_floating_point_numbers.rs  round_floats.rs  shorten_ids.rs  sort_attributes.rs
src/optimizations/common/: constants.rs  helpers.rs  id.rs  id_generator.rs  id_usage.rs  iter.rs  replace_ids.rs  unit.rs
