[package]
name = "svg-optimizer"
version = "0.1.0"
edition = "2021"

[lints.clippy]
module_name_repetitions = "allow"
match_wildcard_for_single_variants = "allow"
pedantic = { level = "warn", priority = -1 }

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.20", features = ["derive"] }
itertools = "0.14.0"
lazy-regex = "3.4.1"
nalgebra = "0.33.2"
rayon = "1.10.0"
xml-rs = "0.8.24"
