[package]
name = "svg-optimizer"
version = "1.0.0"
edition = "2024"
description = "SVG file optimizer"
license = "MIT"
repository = "https://github.com/Pavi1on-Mk-Git/svg-optimizer"
keywords = ["svg", "optimizer"]
categories = ["command-line-utilities"]
include = ["/src"]

[lints.clippy]
module_name_repetitions = "allow"
match_wildcard_for_single_variants = "deny"
wildcard_enum_match_arm = "deny"
pedantic = { level = "warn", priority = -1 }

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
itertools = "0.14.0"
lazy-regex = "3.4.2"
nalgebra = "0.34.1"
rayon = "1.11.0"
xml-rs = "1.0.0"
